@@ -8,6 +8,7 @@
   * Capture link when scheme is unsupported. #362 by Jon Rowe.
   * Pre-defined User-Agent stings are updated to those of more recent versions, and new aliases for IE 10/11 are added.
   * Support for mime-types 1.x is restored while keeping compatible with mime-types 2.x.
+  * Mechanize::Page now responds to #xpath, #css, #at_xpath, #at_css, and #%.
 
 === 2.7.3
 
